--- a/Botoo/UIChatTableViewCellm.xib
+++ b/Botoo/UIChatTableViewCellm.xib
@@ -16,7 +16,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0jV-cH-O7y">
-                        <rect key="frame" x="192" y="50" width="42" height="13"/>
+                        <rect key="frame" x="175" y="49" width="42" height="13"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -28,7 +28,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aLe-9j-qT9">
-                        <rect key="frame" x="242" y="31" width="78" height="50"/>
+                        <rect key="frame" x="234" y="31" width="78" height="50"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clI-0b-Gsp">
                                 <rect key="frame" x="16" y="7" width="46" height="35"/>
@@ -48,14 +48,16 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="Q8d-J4-617" firstAttribute="trailing" secondItem="WZz-8M-lY4" secondAttribute="trailingMargin" id="5ga-wy-did"/>
+                    <constraint firstItem="aLe-9j-qT9" firstAttribute="trailing" secondItem="WZz-8M-lY4" secondAttribute="trailingMargin" constant="10" id="63P-qr-4yZ"/>
                     <constraint firstAttribute="bottomMargin" secondItem="0jV-cH-O7y" secondAttribute="bottom" constant="18.5" id="63q-db-knj"/>
                     <constraint firstItem="aLe-9j-qT9" firstAttribute="bottom" secondItem="WZz-8M-lY4" secondAttribute="bottomMargin" id="8xx-93-pe8"/>
+                    <constraint firstItem="0jV-cH-O7y" firstAttribute="leading" secondItem="WZz-8M-lY4" secondAttribute="leadingMargin" constant="167" id="96d-Iy-GdC"/>
+                    <constraint firstItem="aLe-9j-qT9" firstAttribute="trailing" secondItem="WZz-8M-lY4" secondAttribute="trailingMargin" id="Hjr-Ir-7hJ"/>
                     <constraint firstAttribute="bottomMargin" secondItem="0jV-cH-O7y" secondAttribute="bottom" constant="18.5" id="Qb9-b5-ZHj"/>
                     <constraint firstItem="aLe-9j-qT9" firstAttribute="bottom" secondItem="WZz-8M-lY4" secondAttribute="bottomMargin" id="QiD-mr-Ls8"/>
                     <constraint firstItem="aLe-9j-qT9" firstAttribute="trailing" secondItem="WZz-8M-lY4" secondAttribute="trailingMargin" id="RbA-0C-rYg"/>
                     <constraint firstItem="Q8d-J4-617" firstAttribute="leading" secondItem="WZz-8M-lY4" secondAttribute="leadingMargin" id="W2T-Tq-0cg"/>
                     <constraint firstItem="Q8d-J4-617" firstAttribute="top" secondItem="WZz-8M-lY4" secondAttribute="topMargin" id="lay-fb-lis"/>
-                    <constraint firstItem="0jV-cH-O7y" firstAttribute="leading" secondItem="WZz-8M-lY4" secondAttribute="leadingMargin" constant="13" id="n0o-G0-qmX"/>
                     <constraint firstItem="aLe-9j-qT9" firstAttribute="leading" secondItem="0jV-cH-O7y" secondAttribute="trailing" constant="8" id="nDF-QI-oj2"/>
                     <constraint firstItem="aLe-9j-qT9" firstAttribute="leading" secondItem="0jV-cH-O7y" secondAttribute="trailing" constant="8" id="pFF-qT-Znb"/>
                 </constraints>
