--- a/Botoo/Base.lproj/Main.storyboard
+++ b/Botoo/Base.lproj/Main.storyboard
@@ -220,7 +220,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXz-17-CD1">
                                 <rect key="frame" x="20" y="20" width="30" height="22"/>
                                 <state key="normal" title="닫기">
-                                    <color key="titleColor" red="0.84705882349999995" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="closeButtonTapped:" destination="vnq-Hu-44x" eventType="touchUpInside" id="zbx-Z3-Y7j"/>
@@ -1223,7 +1223,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="E-mail:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0MH-jF-7cC">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="E-mail:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0MH-jF-7cC">
                                 <rect key="frame" x="20" y="124" width="335" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -1247,22 +1247,16 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QXh-Aw-Crq">
                                 <rect key="frame" x="20" y="365" width="335" height="30"/>
-                                <state key="normal" title="Register">
+                                <state key="normal" title="가입하기">
                                     <color key="titleColor" red="0.85098039219999999" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="cT2-x4-Baa" kind="presentation" identifier="toRegisterView" id="evd-0y-4qn"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Log in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s3f-r3-rUB">
-                                <rect key="frame" x="20" y="46" width="335" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7PV-mI-4Qn">
                                 <rect key="frame" x="20" y="319" width="335" height="30"/>
-                                <state key="normal" title="Log in">
+                                <state key="normal" title="로그인">
                                     <color key="titleColor" red="0.85098039219999999" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
@@ -1278,17 +1272,13 @@
                             <constraint firstItem="yY7-1j-KdW" firstAttribute="top" secondItem="0RG-rq-8iA" secondAttribute="bottom" constant="8" id="Dga-o4-434"/>
                             <constraint firstItem="0RG-rq-8iA" firstAttribute="leading" secondItem="8C1-ox-saX" secondAttribute="leadingMargin" id="JMk-8N-cRe"/>
                             <constraint firstItem="yY7-1j-KdW" firstAttribute="trailing" secondItem="8C1-ox-saX" secondAttribute="trailingMargin" id="N3A-bF-A1e"/>
-                            <constraint firstItem="s3f-r3-rUB" firstAttribute="top" secondItem="xyy-c2-lHX" secondAttribute="bottom" constant="26" id="NMh-wO-eA2"/>
-                            <constraint firstItem="s3f-r3-rUB" firstAttribute="leading" secondItem="8C1-ox-saX" secondAttribute="leadingMargin" id="OfG-zO-trk"/>
                             <constraint firstItem="QXh-Aw-Crq" firstAttribute="leading" secondItem="8C1-ox-saX" secondAttribute="leadingMargin" id="PJr-Zx-OvS"/>
                             <constraint firstItem="rcu-Vs-BeU" firstAttribute="trailing" secondItem="8C1-ox-saX" secondAttribute="trailingMargin" id="Q0a-lI-DEs"/>
                             <constraint firstItem="0RG-rq-8iA" firstAttribute="trailing" secondItem="8C1-ox-saX" secondAttribute="trailingMargin" id="SJn-pE-stw"/>
                             <constraint firstItem="0RG-rq-8iA" firstAttribute="top" secondItem="rcu-Vs-BeU" secondAttribute="bottom" constant="33" id="XTm-dS-kVg"/>
-                            <constraint firstItem="0MH-jF-7cC" firstAttribute="top" secondItem="s3f-r3-rUB" secondAttribute="bottom" constant="57" id="a8S-mf-lpT"/>
                             <constraint firstItem="rcu-Vs-BeU" firstAttribute="leading" secondItem="8C1-ox-saX" secondAttribute="leadingMargin" id="lsR-by-v7c"/>
                             <constraint firstItem="yY7-1j-KdW" firstAttribute="leading" secondItem="8C1-ox-saX" secondAttribute="leadingMargin" id="mrw-H9-E11"/>
                             <constraint firstItem="0MH-jF-7cC" firstAttribute="trailing" secondItem="8C1-ox-saX" secondAttribute="trailingMargin" id="ndY-Jm-N8Y"/>
-                            <constraint firstItem="s3f-r3-rUB" firstAttribute="trailing" secondItem="8C1-ox-saX" secondAttribute="trailingMargin" id="onq-QI-c5d"/>
                             <constraint firstItem="7PV-mI-4Qn" firstAttribute="leading" secondItem="8C1-ox-saX" secondAttribute="leadingMargin" id="xdz-7j-BNr"/>
                             <constraint firstItem="yY7-1j-KdW" firstAttribute="top" secondItem="0RG-rq-8iA" secondAttribute="bottom" constant="8" id="ycH-dg-UaH"/>
                         </constraints>
